# pyGSK

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  bumpver.toml  fix_assumedN.patch  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docs.yml  release.yml  retag-to-v.yml
docs/: cli_guide.md  dev_guide.md  dev_workflow.md  examples.md  index.md  install.md  theory.md  usage.md
examples/: README.md  README.py
examples/notebooks/: 01_quickstart_thresholds.ipynb  02_pearson_zone_diagram.ipynb  03_monte_carlo_and_fits.ipynb  README.py  compare_sk_fits_notebook.ipynb  pearson_family_demo_notebook.ipynb  read_npz_quicklook_notebook.ipynb  renorm_sk_test_notebook.ipynb  simulate_and_quicklook_notebook.ipynb  sk_test_notebook.ipynb  threshold_sweep_notebook.ipynb
examples/ovro-lwa/: README.md  ovro-lwa.py  ovro_lwa_two_stage_sk_example.ipynb
examples/scripts/: README.py  compare_sk_fits.py  pearson_family_demo.py  plot_pearson_zones.py  print_sk_thresholds.py  read_npz_quicklook.py  renorm_sk_test.py  simulate_quicklook_api.py  sk_test.py  threshold_sweep.py
src/cli/: sweep_cli.py
src/pygsk/: core.py  plot.py  runtests.py  simulator.py  thresholds.py
src/pygsk/cli/: README.md  __main__.py  main.py  renorm_sk_cli.py  sk_cli.py  sk_renorm_cli.py  sk_thresholds_cli.py  sk_thresholds_sweep_cli.py  sweep_cli.py
tests/: conftest.py  test_core.py  test_core_get_sk_broadcast.py  test_plot_dyn_logscale.py  test_quicklook_scale.py  test_thresholds.py
