[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygsk"
version = "v0.2.0"
description = "Generalized Spectral Kurtosis Toolkit"
authors = [
    { name = "Gelu M. Nita" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pygsk", "cli", "tests"]

[project.urls]
"Homepage" = "https://github.com/SUNCAST-org/pygsk"
"Source" = "https://github.com/SUNCAST-org/pygsk"
"Bug Tracker" = "https://github.com/SUNCAST-org/pygsk/issues"

[project.scripts]
pygsk = "pygsk.cli.main:main"


