[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygsk"
version = "1.0.4"  # PEP 440 (no leading 'v')
description = "Generalized Spectral Kurtosis Toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Gelu M. Nita" }
]
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "mpmath>=1.3.0",
  "matplotlib>=3.7",
]

keywords = [
  "spectral-kurtosis",
  "radio-astronomy",
  "signal-processing",
  "statistics",
  "solar-physics",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "build>=1.0",
  "twine>=4.0",
  "ruff>=0.5.0",
  "black>=24.0",
]

[project.urls]
Homepage = "https://github.com/SUNCAST-org/pygsk"
Source = "https://github.com/SUNCAST-org/pygsk"
"Bug Tracker" = "https://github.com/SUNCAST-org/pygsk/issues"
Changelog = "https://github.com/SUNCAST-org/pygsk/releases"
DOI = "https://doi.org/10.5281/zenodo.17336193"

[project.scripts]
pygsk = "pygsk.cli.main:main"
pygsk-thresholds = "pygsk.cli.thresholds_cli:main"
pygsk-demo-thresholds = "pygsk.cli.demo_thresholds:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pygsk", "pygsk.*"]

# ---- Tooling (optional but handy) ----
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-select = ["E", "F", "I"]  # pycodestyle, pyflakes, import order
exclude = ["docs/_build"]

[tool.black]
line-length = 100
target-version = ["py39"]
